# Permittivity-Analysis-Suite

./: CLAUDE.md  README.md  Resin27.csv  analysis.py  analysis_legacy.py  app.py  callbacks.py  layout.py  main.py  plots.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run.sh  test_auto_fix.py  test_auto_vs_manual.py  test_frontend.py  test_n_optimization.py  test_phase1_5.py  utils.py
analysis/: __init__.py  model_runner.py  postprocessing.py  preprocessing.py
app/: __init__.py  auth_middleware.py  dashboard.py  models.py
app/auth/: __init__.py  forms.py  models.py  routes.py
app/main/: forms.py  routes.py
app/models/: __init__.py  _eval_funcs.py  _mixins.py  base_model.py  cole_cole.py  cole_davidson.py  d_sarkar.py  debye.py  (+9 more)
docs/: BaseModel.md  ColeColeModel.md  DebyeModel.md  HavriliakNegamiModel.md  Hybrid-Debye-Lorentz.md  KramersKronigValidator.md  LorentzModel.md  SarkarModel.md  causal_models_detailed.md  enahancement_plan.md
instance/: app.db
models/: base_model.py  cole_cole_model.py  cole_davidson_model.py  debye_model.py  havriliak_negami_model.py  hybrid_model.py  kk_check.py  kk_model.py  lorentz_model.py  multipole_debye_model.py  sarkar_explorer.py  sarkar_model.py
tests/: __init__.py  conftest.py  test_auto_fix.py  test_auto_vs_manual.py  test_dsarkar.py  test_enhanced_preprocessing.py  test_frontend.py  test_havriliak_negami.py  test_hybrid_debye_lorentz.py  test_integration.py  test_kk_validator.py  test_kk_validator_enhanced.py  test_models_synthetic.py  test_multi_pole_debye.py  test_n_optimization.py  test_phase1_5.py  test_preprocessing.py
utils/: enhanced_preprocessing.py  fitting_utils.py  helpers.py  preprocessing.py
(+17 files in other folders)
