[project]
name = "permittivity-analysis-suite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.1.1",
    "email-validator>=2.0.0",
    "flask>=2.3.0",
    "flask-login>=0.6.0",
    "flask-migrate>=4.0.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-wtf>=1.1.0",
    "pandas>=2.0.0",
    "pip>=25.1.1",
    "plotly>=5.15.0",
    "werkzeug>=2.3.0",
    "wtforms>=3.0.0",
]
