[project]
name = "permittivity-analysis-suite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.1.1",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "plotly>=5.24.1",
    "werkzeug>=2.3.8",
    "wtforms>=3.2.1",
]
